--- a/orderService/docker-compose.yml
+++ b/orderService/docker-compose.yml
@@ -1,18 +1,18 @@
 version: '3.8'
 
 services:
-  db:
+  dbInventory:
     image: mysql:5.7
-    container_name: db
+    container_name: dbInventory
     command: --default-authentication-plugin=mysql_native_password
     restart: unless-stopped
     environment:
       MYSQL_ROOT_USER: root
       MYSQL_ROOT_PASSWORD: mypassword
-      MYSQL_DATABASE: orderService
+      MYSQL_DATABASE: inventoryService
     volumes:
-      - mydb:/var/lib/mysql
+      - mydbInventory:/var/lib/mysql
     ports:
-      - '3306:3306'
+      - '3307:3306'
 volumes:
-  mydb:
+  mydbInventory:
