--- a/inventoryService/src/main/resources/application.properties
+++ b/inventoryService/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
 server.port=8083
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.application.name=inventory-service
