--- a/orderService/src/main/resources/application.properties
+++ b/orderService/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 server.port=8082
 
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.application.name=order-service
