--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,14 @@
 	<description>shopping-application-parent</description>
 	<properties>
 		<java.version>17</java.version>
+		<spring-cloud.version>2022.0.4</spring-cloud.version>
 	</properties>
 	<packaging>pom</packaging>
 	<modules>
 		<module>inventoryService</module>
 		<module>productService</module>
         <module>orderService</module>
+		<module>discoveryServer</module>
 	</modules>
 	<dependencyManagement>
 		<dependencies>
@@ -28,6 +30,13 @@
 				<groupId>org.testcontainers</groupId>
 				<artifactId>testcontainers-bom</artifactId>
 				<version>1.19.1</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
