--- a/productService/src/main/resources/application.properties
+++ b/productService/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=productService
 spring.data.mongodb.authentication-database=admin
 logging.level.root="debug"
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.application.name=product-service
