--- a/discoveryServer/pom.xml
+++ b/discoveryServer/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>net.ddns.sinapouya</groupId>
 	<artifactId>discoveryServer</artifactId>
 	<version>${parent.version}</version>
-	<name>discoveryServer</name>
+	<name>discoveryserver</name>
 	<description>discoveryServer project</description>
 	<properties>
 		<java.version>17</java.version>
@@ -25,17 +25,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
-
-
-	<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<dependencyManagement>
-
-	</dependencyManagement>
 
 
 </project>
