--- a/discoveryServer/src/main/resources/application.properties
+++ b/discoveryServer/src/main/resources/application.properties
@@ -3,4 +3,4 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 server.port=8761
 
-spring.application.name=discovery-service
+spring.application.name=discoveryservice
