--- a/inventoryService/src/main/resources/application.properties
+++ b/inventoryService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3307/inventoryService
+spring.datasource.url=jdbc:mysql://dbInventory:3306/inventoryService
 spring.datasource.username=root
 spring.datasource.password=mypassword
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -6,5 +6,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 server.port=8083
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-spring.application.name=inventory-service
+eureka.client.service-url.defaultZone=http://discoveryservice:8761/eureka
+spring.application.name=inventoryservice
