--- a/orderService/docker-compose.yml
+++ b/orderService/docker-compose.yml
@@ -1,18 +1,34 @@
 version: '3.8'
 
 services:
-  dbInventory:
+  orderservice:
+    build: .
+    container_name: orderservice
+    ports:
+      - '8084:8080'
+    depends_on:
+      - dbOrder1
+    networks:
+      ordernetwork:
+      discoverynetwork:
+  dbOrder1:
     image: mysql:5.7
-    container_name: dbInventory
+    container_name: dbOrder1
     command: --default-authentication-plugin=mysql_native_password
     restart: unless-stopped
     environment:
       MYSQL_ROOT_USER: root
       MYSQL_ROOT_PASSWORD: mypassword
-      MYSQL_DATABASE: inventoryService
+      MYSQL_DATABASE: orderService
     volumes:
-      - mydbInventory:/var/lib/mysql
+      - mydbOrder1:/var/lib/mysql
+    networks:
+      ordernetwork:
     ports:
-      - '3307:3306'
+      - '3309:3306'
 volumes:
-  mydbInventory:
+  mydbOrder1:
+networks:
+  ordernetwork:
+  discoverynetwork:
+    external: true
