--- a/orderService/src/main/resources/application.properties
+++ b/orderService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/orderService
+spring.datasource.url=jdbc:mysql://dbOrder:3306/orderService
 spring.datasource.username=root
 spring.datasource.password=mypassword
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -6,5 +6,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 server.port=8082
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-spring.application.name=order-service
+eureka.client.service-url.defaultZone=http://discoveryservice:8761/eureka
+spring.application.name=orderservice
