--- a/productService/docker-compose.yml
+++ b/productService/docker-compose.yml
@@ -1,7 +1,16 @@
 version: '3.1'
 
 services:
-
+  productservice:
+    build: .
+    container_name: productservice
+    ports:
+      - '8085:8080'
+    depends_on:
+      - mongo
+    networks:
+      mongonetwork:
+      discoverynetwork:
   mongo:
     image: mongo:6
     restart: always
@@ -11,6 +20,8 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: example
     ports:
       - 27017:27017
+    networks:
+      mongonetwork:
     volumes:
       - ./db_data/:/data/db/
       - /etc/timezone:/etc/timezone:ro
@@ -18,9 +29,15 @@ services:
     image: mongo-express
     restart: always
     container_name: mongo_ui
+    networks:
+      mongonetwork:
     ports:
       - 8081:8081
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017
+networks:
+  mongonetwork:
+  discoverynetwork:
+    external: true
