--- a/productService/src/main/resources/application.properties
+++ b/productService/src/main/resources/application.properties
@@ -3,11 +3,11 @@ server.port=8080
 
 spring.data.mongodb.username=root
 spring.data.mongodb.password=example
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongo
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=productService
 spring.data.mongodb.authentication-database=admin
 logging.level.root="debug"
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-spring.application.name=product-service
+eureka.client.service-url.defaultZone=http://discoveryservice:8761/eureka
+spring.application.name=productservice
