--- a/inventoryService/pom.xml
+++ b/inventoryService/pom.xml
@@ -59,8 +59,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webflux</artifactId>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 
 
