--- a/orderService/src/main/resources/application.properties
+++ b/orderService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://dbOrder:3306/orderService
+spring.datasource.url=jdbc:mysql://databaseOrder:3306/orderService
 spring.datasource.username=root
 spring.datasource.password=mypassword
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -8,3 +8,4 @@ server.port=8082
 
 eureka.client.service-url.defaultZone=http://discoveryservice:8761/eureka
 spring.application.name=orderservice
+inventory.service.url=http://inventoryservice:8083
