--- a/productService/pom.xml
+++ b/productService/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>net.ddns.sinapouya</groupId>
 	<artifactId>productService</artifactId>
 	<version>${parent.version}</version>
-	<name>product-service</name>
+	<name>productservice</name>
 	<description>product-service Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
