add api gate way service

--- a/inventoryService/docker-compose.yml
+++ b/inventoryService/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   inventoryservice:
     build: .
     container_name: inventoryservice
-    ports:
-      - '8083:8083'
+#    ports:
+#      - '8083:8083'
     depends_on:
       - dbInventory
     networks:
