--- a/productService/docker-compose.yml
+++ b/productService/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   productservice:
     build: .
     container_name: productservice
-    ports:
-      - '8085:8080'
+#    ports:
+#      - '8085:8080'
     depends_on:
       - mongo
     networks:
