add user microservice and keycloak

--- a/apigateway/src/main/resources/application.properties
+++ b/apigateway/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 server.port=8080
 
-eureka.client.service-url.defaultZone=http://discoveryservice:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka:password@discoveryservice:8761/eureka
+#eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka
 spring.application.name=apigatewayservice
 
-logging.level.root=error
+logging.level.root=debug
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=debug
-logging.level.org.springframework.cloud.gateway=error
+logging.level.org.springframework.cloud.gateway=debug
 
 ## inventory service route
 spring.cloud.gateway.routes[0].id=inventoryservice
@@ -33,7 +34,23 @@ spring.cloud.gateway.routes[4].id=discoveryservice-static
 spring.cloud.gateway.routes[4].uri=http://discoveryservice:8761
 spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/**
 
+## User server service route
+spring.cloud.gateway.routes[5].id=userservice
+spring.cloud.gateway.routes[5].uri=lb://userservice
+spring.cloud.gateway.routes[5].predicates[0]=Path=/api/user
 
+spring.security.oauth2.client.registration.keycloak.client-id=spring-client
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.scope=openid
+
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://keycloak:8080/realms/spring-app-microservices-realm
+#spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8090/realms/spring-app-microservices-realm
+spring.security.oauth2.client.provider.keycloak.user-name-attribute=springappuser
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/spring-app-microservices-realm
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8090/realms/spring-app-microservices-realm
+
+spring.main.web-application-type=reactive
 
 
 
