--- a/orderService/src/main/resources/application.properties
+++ b/orderService/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 server.port=0
 
-eureka.client.service-url.defaultZone=http://discoveryservice:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka:password@discoveryservice:8761/eureka
 spring.application.name=orderservice
 inventory.service.url=http://inventoryservice:8083
