--- a/productService/src/main/resources/application.properties
+++ b/productService/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.data.mongodb.database=productService
 spring.data.mongodb.authentication-database=admin
 logging.level.root="debug"
 
-eureka.client.service-url.defaultZone=http://discoveryservice:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka:password@discoveryservice:8761/eureka
 spring.application.name=productservice
