--- a/inventoryService/src/main/resources/application.properties
+++ b/inventoryService/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 server.port=0
 
-eureka.client.service-url.defaultZone=http://discoveryservice:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka:password@discoveryservice:8761/eureka
 spring.application.name=inventoryservice
+logging.level.root=debug
