--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<module>productService</module>
         <module>orderService</module>
 		<module>discoveryServer</module>
+		<module>userService</module>
 	</modules>
 	<dependencyManagement>
 		<dependencies>
@@ -59,6 +60,10 @@
 						</exclude>
 					</excludes>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
