--- a/userService/pom.xml
+++ b/userService/pom.xml
@@ -8,10 +8,10 @@
 		<version>0.0.1</version>
 	</parent>
 	<groupId>net.ddns.sinapouya</groupId>
-	<artifactId>orderService</artifactId>
+	<artifactId>userService</artifactId>
 	<version>${parent.version}</version>
-	<name>orderservice</name>
-	<description>orderEntity service</description>
+	<name>userService</name>
+	<description>user Service</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -25,20 +25,6 @@
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-				<groupId>com.mysql</groupId>
-				<artifactId>mysql-connector-j</artifactId>
-				<version>8.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
@@ -46,12 +32,6 @@
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>junit-jupiter</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.testcontainers</groupId>
-			<artifactId>mysql</artifactId>
-			<version>1.19.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -63,10 +43,11 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-loadbalancer</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
-	</dependencies>
 
+	</dependencies>
 
 </project>
