--- a/inventoryService/Dockerfile
+++ b/inventoryService/Dockerfile
@@ -2,4 +2,4 @@ FROM openjdk:17-jdk-slim
 
 COPY target/*.jar app.jar
 
-ENTRYPOINT ["java","-jar","app.jar"]
+ENTRYPOINT ["java","-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5111","-jar","app.jar"]
