--- a/inventoryService/docker-compose.yml
+++ b/inventoryService/docker-compose.yml
@@ -9,9 +9,12 @@ services:
     networks:
       inventorynetwork:
       discoverynetwork:
+    ports:
+      - '5111:5111'
+
 
   dbInventory:
-    image: mysql:5.7
+    image: mysql:5.7.28
     container_name: dbInventory
     command: --default-authentication-plugin=mysql_native_password
     restart: unless-stopped
